hphp/hack/test/typecheck/fc_enum_14.php.like_types.exp
File "fc_enum_14.php", line 9, characters 6-8:
Enums must be int or string or arraykey, not ~Foo (Typing[4024])
